--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
         <div class="w3-third">
             <div class="w3-white w3-text-grey w3-card-4">
                 <div class="w3-display-container">
+                        
                     <div class="lang-version-khach">
-                        <span><a href="index.html">Рус</a></span> / <span><a href="en.html">Eng</a></span>
+						<span><a href="index.html">Рус</a></span> / <span><a href="en.html">Eng</a></span>
                     </div>
-                    <img src="img/IMG_2256_new.jpg" style="width:100%" alt="Avatar">
+						
+                    <img src="img/I_son.jpg" style="width:100%" alt="Avatar">
                     <div class="w3-display-bottomleft w3-container w3-text-black khach-text">
-                        <h2>Хачатур Карапетян</h2>
                     </div>
                 </div>
                 <div class="w3-container">
@@ -51,14 +52,26 @@
                     </p>
                     <p>MySql</p>
                     <div class="w3-progress-container w3-round-xlarge w3-small">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:20%">
-                            <div class="w3-center w3-text-white">20%</div>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:40%">
+                            <div class="w3-center w3-text-white">40%</div>
+                        </div>
+                    </div>
+					<p>SQL Server</p>
+                    <div class="w3-progress-container w3-round-xlarge w3-small">
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:30%">
+                            <div class="w3-center w3-text-white">30%</div>
+                        </div>
+                    </div>
+					<p>PostgreSQL</p>
+                    <div class="w3-progress-container w3-round-xlarge w3-small">
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:30%">
+                            <div class="w3-center w3-text-white">30%</div>
                         </div>
                     </div>
                     <p>C#</p>
                     <div class="w3-progress-container w3-round-xlarge w3-small">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:20%">
-                            <div class="w3-center w3-text-white">20%</div>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:30%">
+                            <div class="w3-center w3-text-white">30%</div>
                         </div>
                     </div>
                     <p>PHP</p>
@@ -69,8 +82,8 @@
                     </div>
                     <p>Python</p>
                     <div class="w3-progress-container w3-round-xlarge w3-small">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:50%">
-                            <div class="w3-center w3-text-white">50%</div>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:60%">
+                            <div class="w3-center w3-text-white">60%</div>
                         </div>
                     </div>
                     <p>Django</p>
@@ -87,8 +100,14 @@
                     </div>
                     <p>CSS</p>
                     <div class="w3-progress-container w3-round-xlarge w3-small">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:87%">
-                            <div class="w3-center w3-text-white">87%</div>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:85%">
+                            <div class="w3-center w3-text-white">85%</div>
+                        </div>
+                    </div>
+					<p>Java</p>
+                    <div class="w3-progress-container w3-round-xlarge w3-small">
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:30%">
+                            <div class="w3-center w3-text-white">30%</div>
                         </div>
                     </div>
                     <p>JS</p>
@@ -103,16 +122,22 @@
                             <div class="w3-center w3-text-white">60%</div>
                         </div>
                     </div>
+					<p>Bitrix</p>
+                    <div class="w3-progress-container w3-round-xlarge w3-small">
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:20%">
+                            <div class="w3-center w3-text-white">20%</div>
+                        </div>
+                    </div>
                     <p>Wordpress</p>
                     <div class="w3-progress-container w3-round-xlarge w3-small">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:30%">
-                            <div class="w3-center w3-text-white">30%</div>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:20%">
+                            <div class="w3-center w3-text-white">20%</div>
                         </div>
                     </div>
                     <p>Cs-cart</p>
                     <div class="w3-progress-container w3-round-xlarge w3-small">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:25%">
-                            <div class="w3-center w3-text-white">25%</div>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:20%">
+                            <div class="w3-center w3-text-white">20%</div>
                         </div>
                     </div>
                     <p>Git</p>
@@ -123,8 +148,8 @@
                     </div>
                     <p>Adobe Photoshop</p>
                     <div class="w3-progress-container w3-round-xlarge w3-small">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:70%">
-                            <div class="w3-center w3-text-white">70%</div>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:80%">
+                            <div class="w3-center w3-text-white">80%</div>
                         </div>
                     </div>
                     <p>Adobe Illustrator</p>
@@ -147,8 +172,8 @@
                     </div>
                     <p>Inkscape</p>
                     <div class="w3-progress-container w3-round-xlarge w3-small">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:70%">
-                            <div class="w3-center w3-text-white">70%</div>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:80%">
+                            <div class="w3-center w3-text-white">80%</div>
                         </div>
                     </div>
                     <p>Rhinoceros</p>
@@ -171,8 +196,8 @@
                     </div>
                     <p>SolidWorks</p>
                     <div class="w3-progress-container w3-round-xlarge w3-small">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:80%">
-                            <div class="w3-center w3-text-white">80%</div>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:70%">
+                            <div class="w3-center w3-text-white">70%</div>
                         </div>
                     </div>
                     <p>MS Office</p>
@@ -190,14 +215,14 @@
                         <div class="w3-progressbar w3-round-xlarge w3-teal khach-text" style="width:100%">
                             <span>Родной</span></div>
                     </div>
-                    <p>Русский 80%</p>
+                    <p>Русский 85%</p>
                     <div class="w3-progress-container w3-round-xlarge">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal khach-text" style="width:80%"><span>Свободно владею</span>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal khach-text" style="width:85%"><span>Свободно владею</span>
                         </div>
                     </div>
-                    <p>Английский 65%</p>
+                    <p>Английский 75%</p>
                     <div class="w3-progress-container w3-round-xlarge">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal khach-text" style="width:65%">
+                        <div class="w3-progressbar w3-round-xlarge w3-teal khach-text" style="width:75%">
                             <span>Могу проходить интервью</span></div>
                     </div>
                     <br>
@@ -250,7 +275,7 @@
                                     Семейное положение
                                 </td>
                                 <td>
-                                    Женат, 2-е детей
+                                    Женат, есть дети.
                                 </td>
                             </tr>
 
@@ -258,13 +283,25 @@
                         <hr>
                         <div class="about">
                             <p>
-                                Есть опыт по созданию
-                                адаптивных web-страниц, интернет-магазинов и т.д. В настоящее время прохожу 6-месячный
-                                курс на портале <b>Geek Brains</b> по разработке web-приложений на языке
-                                программирования <a href="https://geekbrains.ru/professions/python_developer" target = _blank>
-                                Python / Django</a>. Есть теоретические знания по созданию ИС и БД на MySQL.
-                                Хочу устроиться в IT-компанию на постоянной основе. Без опыта, но с большими
-                                теоретическими знаниями.
+                                Интересуюсь и развиваюсь в направлении по обработке и анализа больших данных на языке Python, SQL, Java.
+								Ищу возможность присоединиться к команде разработчиков, для получения реальной практики и улучшения своих навыков. 
+								Большое желание трудиться, обучаться и развиваться в данном направлении.
+								Выпускник РЭУ им. Плеханова 2019г., направление прикладная информатика.
+								Готов рассмотреть различные варианты сотрудничества: от стажировки и до полной занятости.
+								Буду благодарен за любой опыт.
+								Мой багаж:
+								- Базовый уровень (HTML+СSS), Less, GIT, 1С, MS Office, Power BI, SolidWorks, Revit, Rhinoceros 3D, Autocad;
+								- Опыт работы с NoSQL, MуSQL, MongoDb, SQL-запросы;Есть опыт по созданию адаптивных web-страниц, на языке программирования Python / Django. 
+								Есть теоретические знания и немного опыта работы с модулями data science для pyton: Pandas, Statsmodels, scikit-learn, NumPy, SciPy, Matplotlib, NLTK и т.д. 
+								Опыт работы в операционной системе Linux на уровне разворачивания приложений и сервисов. Работал в конструкторском бюро Python программистом по автоматизации процессов изменения и составления спецификаций и проектных документов с помощью взаимодействия с API программы Autodesk Revit.
+								<p>
+								<a href = "https://www.linkedin.com/in/хачатур-карапетян-71a2aba2/">Ссылка на Linkedin:
+								</a>
+								</p> 
+								<a href = "https://github.com/KhachKara"> Ссылка на GIT</a>
+								<p>
+								<a href = "http://rosalind.info/users/Khachkara/">Ссылка на Rosalind</a>
+								</p>
                             </p>
                         </div>
                     </h4>
@@ -277,10 +314,12 @@
         <div class="w3-twothird">
 
             <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-                <div class="lang-version-khach">
+                <!--
+				<div class="lang-version-khach">
                     <span><a href="index.html">Рус</a></span> / <span><a href="en.html">Eng</a></span>
                 </div>
-                <h2 class="w3-text-grey w3-padding-16">
+                -->
+				<h2 class="w3-text-grey w3-padding-16">
                     <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>
                     Опыт работы
                 </h2>
@@ -301,7 +340,7 @@
                             Faimond Astra OV (станок для алмазной огранки)</a> .
                     </P>
                     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Январь 2004 - <span
-                            class="w3-tag w3-teal w3-round">по сей день</span></h6>
+                            class="w3-tag w3-teal w3-round">по настоящее время</span></h6>
                     <hr>
                 </div>
                 <div class="w3-container">
@@ -324,13 +363,13 @@
                         class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Образование</h2>
                 <div class="w3-container">
                     <h5 class="w3-opacity"><b><a
-                            href="http://www.rea.ru/ru/org/faculties/Pages/Fakultet-ehlektronnogo-obuchenija.aspx"
-                            target="_blank">РЭУ им Плеханова / Прикладная Информатика в
-                        Экономике</a></b>
+                            href="https://www.rea.ru/ru/org/cathedries/Pages/Kafedra-prikladnykh-informacionnykh-tekhnologijj-i-informacionnojj-bezopasnosti.aspx"
+                            target="_blank">РЭУ им Плеханова / Кафедра прикладной информатики и информационной безопасности</a></b>
                     </h5>
-                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014 - <span
-                            class="w3-tag w3-teal w3-round">окончание учебы 2018</span></h6>
-                    <p>Электронное обучение / Бакалавриат</p>
+                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014 - 2019</h6>
+                    <p>Форма обучения: Очно-заочное / Бакалавриат</p>
+					<P>Средний балл: 4.53</P>
+					<a href="Успеваемость.pdf" target="_blank">Успеваемость</a>
                     <hr>
                 </div>
                 <div class="w3-container">
@@ -338,7 +377,7 @@
                         <a href="http://polytech.am/wpolytech/?lang=ru" target="_blank">Ереванский Политехнический
                             Институт / Радио инженерия</a></b></h5>
                     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1993 - 1998</h6>
-                    <p>Очное обучениие / Бакалавриат</p>
+                    <p>Форма обучения: Очное / Бакалавриат</p>
                     <hr>
                 </div>
             </div>
@@ -351,6 +390,27 @@
                 <hr>
 
                 <div class="container-certificates">
+					 <!-- ---------- Конец / Начало блока   -------  -->
+                    <div class="w3-container khach-article">
+                        <div class="container-article-text">
+                            <h5 class="w3-opacity"><b>«Java. Быстрый старт»</b></h5>
+                            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>18 марта 2019
+                            </h6>
+                            <p><a  href="https://geekbrains.ru/chapters/1541 target="_blank">GeekBrains</a>
+                                <a class="w3-tag w3-teal w3-round" href="https://github.com/KhachKara/Catch_the_drop"
+                                   target="_blank" title="Змейка"> Курсовой проект</a>
+                            </p>
+
+                            <a href="https://geekbrains.ru/certificates/577330" target="_blank">Ссылка на сертификат
+                                для работодателя</a>
+                        </div>
+                        <div class="container-article-image">
+                            <img src="img/certificates/ScreenShot029.jpg" height="160"
+                                 alt="" class="">
+                        </div>
+                    </div>
+                    <hr>
+                    <!-- ---------- Конец / Начало блока   -------  -->
                     <!-- ---------- Конец / Начало блока   -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
