--- a/index.html
+++ b/index.html
@@ -290,12 +290,14 @@
 								Готов рассмотреть различные варианты сотрудничества: от стажировки и до полной занятости.
 								Буду благодарен за любой опыт.
 								Мой багаж:
+				    				<p>
 								- Базовый уровень (HTML+СSS), Less, GIT, 1С, MS Office, Power BI, SolidWorks, Revit, Rhinoceros 3D, Autocad;
+								</p>
 								- Опыт работы с NoSQL, MуSQL, MongoDb, SQL-запросы;Есть опыт по созданию адаптивных web-страниц, на языке программирования Python / Django. 
 								Есть теоретические знания и немного опыта работы с модулями data science для pyton: Pandas, Statsmodels, scikit-learn, NumPy, SciPy, Matplotlib, NLTK и т.д. 
 								Опыт работы в операционной системе Linux на уровне разворачивания приложений и сервисов. Работал в конструкторском бюро Python программистом по автоматизации процессов изменения и составления спецификаций и проектных документов с помощью взаимодействия с API программы Autodesk Revit.
 								<p>
-								<a href = "https://www.linkedin.com/in/хачатур-карапетян-71a2aba2/">Ссылка на Linkedin:
+								<a href = "https://www.linkedin.com/in/хачатур-карапетян-71a2aba2/">Ссылка на Linkedin
 								</a>
 								</p> 
 								<a href = "https://github.com/KhachKara"> Ссылка на GIT</a>
