--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>14 февраля 2017
                             </h6>
                             <p><a href="https://geekbrains.ru/streams/1359/lessons/9227" target="_blank">Geek Brains</a>
-                                <a class="w3-tag w3-teal w3-round" href="http://study-khach.xyz/magazin-fruktov/"
+                                <a class="w3-tag w3-teal w3-round" href="https://github.com/KhachKara/Geek_Brains/tree/master/magazin_fruktov"
                                    target="_blank" title="Интернет магазин фруктов"> Курсовой проект</a>
                             </p>
                             <a href="https://geekbrains.ru/certificates/174218" target="_blank">Ссылка на сертификат
