--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                             <h5 class="w3-opacity"><b>«Английский для IT-специалистов от Geek Brains»</b></h5>
                             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>28 февраля 2017
                             </h6>
-                            <p><a  href="https://geekbrains.ru/courses/98/chapters/1278" target="_blank">Geek Brains
+                            <p><a  href="https://geekbrains.ru/certificates/183394" target="_blank">Geek Brains
                                 <span class="w3-tag w3-teal w3-round"> Видеокурс </span></a>
                             </p>
                             <a href="https://geekbrains.ru/go/LD9sn4" target="_blank">Ссылка на сертификат
