--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 <hr>
 
                 <div class="container-certificates">
-					 <!-- ---------- Конец / Начало блока   -------  -->
+		<!-- ---------- Конец / Начало блока  «Java. Быстрый старт»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Java. Быстрый старт»</b></h5>
@@ -413,8 +413,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «Видео-курс: основы баз данных. Язык SQL» -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Видео-курс: основы баз данных. Язык SQL»</b></h5>
@@ -434,8 +433,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «Объектно-ориентированное программирование» -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Объектно-ориентированное программирование»</b></h5>
@@ -455,7 +453,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «PHP Tutorial course» -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«PHP Tutorial course»</b></h5>
@@ -472,7 +470,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «Intro to Python for Data Science» -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Intro to Python for Data Science»</b></h5>
@@ -489,7 +487,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «Python 3 Tutorial course»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Python 3 Tutorial course»</b></h5>
@@ -506,7 +504,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «Django. Создание веб сайтов на Python»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Django. Создание веб сайтов на Python»</b></h5>
@@ -523,7 +521,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «Python. Уровень1» -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Python. Уровень1»</b></h5>
@@ -540,13 +538,13 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «Английский для IT-специалистов от Geek Brains» -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Английский для IT-специалистов от Geek Brains»</b></h5>
                             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>28 февраля 2017
                             </h6>
-                            <p><a  href="https://geekbrains.ru/certificates/183394" target="_blank">Geek Brains
+                            <p><a  href="https://geekbrains.ru/courses/98" target="_blank">Geek Brains
                                 <span class="w3-tag w3-teal w3-round"> Видеокурс </span></a>
                             </p>
                             <a href="https://geekbrains.ru/go/LD9sn4" target="_blank">Ссылка на сертификат
@@ -558,7 +556,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «Английский для IT»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Английский для IT»</b></h5>
@@ -575,7 +573,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «HTML/CSS. Основы создания сайтов»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«HTML/CSS. Основы создания сайтов»</b></h5>
@@ -594,7 +592,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «Easy way to technical writing» -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Easy way to technical writing»</b></h5>
@@ -613,7 +611,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока  «Google AdWords»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Google AdWords»</b></h5>
@@ -635,7 +633,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Основы маркетинга»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Основы маркетинга»</b></h5>
@@ -654,7 +652,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «CSS Fundamentals course»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«CSS Fundamentals course»</b></h5>
@@ -671,7 +669,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «HTML Fundamentals course»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«HTML Fundamentals course»</b></h5>
@@ -688,7 +686,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Основы Программирования»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Основы Программирования»</b></h5>
@@ -705,7 +703,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «GIT. Быстрый Старт. Инструмент командной разработки»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«GIT. Быстрый Старт. Инструмент командной разработки»</b></h5>
@@ -722,7 +720,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Основы работы с Google Analytics»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Основы работы с Google Analytics»</b></h5>
@@ -741,7 +739,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Работа в Microsoft Access XP»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Работа в Microsoft Access XP»</b></h5>
@@ -760,7 +758,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Современные операционные системы»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Современные операционные системы»</b></h5>
@@ -779,7 +777,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Операционные среды, системы и оболочки»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Операционные среды, системы и оболочки»</b></h5>
@@ -798,7 +796,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Проектирование информационных систем»   -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Проектирование информационных систем»</b></h5>
@@ -817,7 +815,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «JavaScript Tutorial »   -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«JavaScript Tutorial »</b></h5>
@@ -834,7 +832,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Локальные сети и интернет»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Локальные сети и интернет»</b></h5>
@@ -853,7 +851,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Компьютерные сети»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Компьютерные сети»</b></h5>
@@ -872,7 +870,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Введение в базы данных для школьников»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Введение в базы данных для школьников»</b></h5>
@@ -891,7 +889,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока   -------  -->
+                    <!-- ---------- Конец / Начало блока «Введение в цифровую электронику»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Введение в цифровую электронику»</b></h5>
