--- a/index.html
+++ b/index.html
@@ -393,6 +393,28 @@
                 <hr>
 
                 <div class="container-certificates">
+		<!-- ---------- Конец / Начало блока  «Lynda.com - Java Essential Training»  -------  -->
+                    <div class="w3-container khach-article">
+                        <div class="container-article-text">
+                            <h5 class="w3-opacity"><b>
+							<a href="https://www.youtube.com/watch?v=RoH2P9TSMy0&list=PLPqmRYrGswqGqEhwnQZSQJL5ldm9m_K56&index=1" 
+							target="_blank">
+							«Lynda.com - Java Essential Training» Видео-курс</a></b></h5>
+                            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>30 марта 2019
+                            </h6>
+                            <p><a  href="https://www.lynda.com/search?q=java" target="_blank">Lynda.com</a>
+                                <a class="w3-tag w3-teal w3-round" href="https://github.com/KhachKara/Lynda.com/blob/master/Java_Essential_Training/Lynda.com%20-%20Java%20Essential%20Training.zip"
+                                   target="_blank" title="Змейка"> Проекты курса </a>
+                            </p>
+
+                            <a href="https://github.com/KhachKara/Lynda.com/blob/master/Java_Essential_Training/Список%20тем%20видео-курса.txt" target="_blank">Список тем видео-курса</a>
+                        </div>
+                        <div class="container-article-image">
+                            <img src="img/certificates/ScreenShot030.jpg" height="160"
+                                 alt="" class="">
+                        </div>
+                    </div>
+                    <hr>
 		<!-- ---------- Конец / Начало блока  «Java. Быстрый старт»  -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
@@ -413,7 +435,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- ---------- Конец / Начало блока  «Видео-курс: основы баз данных. Язык SQL» -------  -->
+        <!-- ---------- Конец / Начало блока  «Видео-курс: основы баз данных. Язык SQL» -------  -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>«Видео-курс: основы баз данных. Язык SQL»</b></h5>
