Поменял ссылку видео на альбом ВК

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>
-							<a href="https://www.youtube.com/watch?v=RoH2P9TSMy0&list=PLPqmRYrGswqGqEhwnQZSQJL5ldm9m_K56&index=1" 
+							<a href="https://vk.com/videos39817202?section=album_1" 
 							target="_blank">
 							«Lynda.com - Java Essential Training» Видео-курс</a></b></h5>
                             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>30 марта 2019
