Исправил ссылку на список роликов

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                                    target="_blank" title="Змейка"> Проекты курса </a>
                             </p>
 
-                            <a href="https://github.com/KhachKara/Lynda.com/blob/master/Java_Essential_Training/Список%20тем%20видео-курса.txt" target="_blank">Список тем видео-курса</a>
+                            <a href="https://github.com/KhachKara/Lynda.com/blob/master/Java_Essential_Training/Список%20тем%20видео-курса.html" target="_blank">Список тем видео-курса</a>
                         </div>
                         <div class="container-article-image">
                             <img src="img/certificates/ScreenShot030.jpg" height="160"
