Добавил курс Spring & Hibernate for Beginners в прогрессе

--- a/index.html
+++ b/index.html
@@ -393,7 +393,29 @@
                 <hr>
 
                 <div class="container-certificates">
-		<!-- ---------- Конец / Начало блока  «Lynda.com - Java Essential Training»  -------  -->
+		<!-- ---------- Конец / Начало блока  «Lynda.com - Java Essential Training» -->
+                    <div class="w3-container khach-article khach-border">
+                        <div class="container-article-text">
+                            <h5 class="w3-opacity"><b>
+						<!-- 	<a href="https://vk.com/videos39817202?section=album_1" 
+							target="_blank"> -->
+							«Spring & Hibernate for Beginners» Видео-курс <!-- </a> --> </b></h5>
+                            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>В процессе!
+                            </h6>
+                            <p> <a  href="https://www.udemy.com/spring-hibernate-tutorial/?couponCode=SPRING-BLOG-15" target="_blank"> udemy.com </a>
+                                <a class="w3-tag w3-teal w3-round" href="https://github.com/KhachKara/Projects/tree/master/Spring/Spring-Hibernate"
+                                   target="_blank" title="Змейка">  Проекты курса <!</a> 
+                            </p>
+
+                            <a href="https://github.com/KhachKara/Projects/blob/master/Spring/Spring-Hibernate/Список%20тем%20видео-курса.txt" target="_blank">Список тем видео-курса</a>
+                        </div>
+                        <div class="container-article-image">
+                            <img src="img/certificates/ScreenShot031.jpg" height="160"
+                                 alt="" class="">
+                        </div>
+                    </div>
+                    <hr>
+		<!-- ---------- Конец / Начало блока  «Lynda.com - Java Essential Training» -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>
