--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <br>
-
+	<!--------------------- О себе! ---------------------------------------------------->
             <div class="tasks">
                 <div class="task-1">
                     <h2 class="w3-text-grey w3-padding-16"><i
@@ -244,7 +244,7 @@
                                     Ф.И.О.
                                 </td>
                                 <td>
-                                    Хачатур Карапетян Зорикович
+                                    Карапетян Хачатур Зорикович
                                 </td>
                             </tr>
                             <tr>
