--- a/index.html
+++ b/index.html
@@ -965,12 +965,12 @@
 
 <!-- Page Footer -->
 <footer class="w3-container w3-teal w3-center w3-margin-top">
-    <p>Найдите меня в соц. сетях.</p>
+    <p>Я в соц. сетях.</p>
     <a href="https://www.facebook.com/khachkara?ref=bookmarks" target="_blank"><i
             class="fa fa-facebook-official w3-hover-text-indigo w3-large"></i></a>
     <a href="https://vk.com/id39817202" target="_blank"><i class="fa fa-vk w3-hover-text-indigo w3-large"></i></a>
     <a href="https://github.com/KhachKara" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-    <p>Создатель страницы: Хачатур Карапетян</p>
+    <p> © 2019 Хачатур Карапетян</p>
 </footer>
 <!-- ----------------------------- Google Analytics -------------------------------- -->
 <script>
